--- a/01_CF_BasicStructure.yml
+++ b/01_CF_BasicStructure.yml
@@ -1,5 +1,6 @@
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/template-anatomy.html
 AWSTemplateFormatVersion: "2010-09-09"
+#Description is optional but recommended
 Description: "Describes this template"
 
 Parameters:
